fix: seguridad, rate limiting, CORS configurable, restore endpoints, mejoras generales
- Rate limiting en login (Bucket4j: 5 intentos/15min por IP)
- CORS configurable via application.properties
- Dockerfile con usuario non-root
- Restore endpoints para Juzgado y Circunscripcion
- @Async en metodos de alerta de EmailService
- entityManager.refresh() en lugar de clear() en SoftwareService
- Eliminada query duplicada en ContratoRepository
- WebSocket CORS configurable

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>